# portal

./: .gitignore  .mailmap  Cargo.toml  Justfile  build.rs  license-mit.txt  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/lucide/: readme.md
assets/roboto/: readme.md
crates/portal/: Cargo.toml
crates/portal-proc-macro/: Cargo.toml
crates/portal-proc-macro/src/: lib.rs
crates/portal-wormhole/: Cargo.toml
crates/portal-wormhole/src/: cancellation.rs  defaults.rs  error.rs  fs.rs  lib.rs  receive.rs  send.rs  sync.rs  temp_zip.rs  transit.rs
crates/portal-wormhole/src/fs/: download.rs  filename.rs  path_parts.rs  persist.rs
crates/portal-wormhole/src/send/: request.rs  sendable_file.rs
crates/portal/src/: receive.rs  view_switcher.rs
crates/windows-app-icon/: Cargo.toml
crates/windows-app-icon/src/: lib.rs
src/: auto_viewport_theme.rs  egui_ext.rs  error.rs  font.rs  fs.rs  lib.rs  macros.rs  main.rs  main_view.rs  receive.rs  send.rs  shell.rs  startup_action.rs  sync.rs  tab_button.rs  themed_visuals.rs  transit_info.rs  transmit_info.rs  utils.rs  version.rs  view_switcher.rs  visuals.rs  widgets.rs
src/shell/: open.rs  progress.rs  reveal.rs
src/widgets/: cancel.rs  menu.rs  page.rs  primary_button.rs  tab_button.rs  toggle.rs  version.rs  view_switcher.rs
xtask/: Cargo.toml
xtask/src/: main.rs
