[package]
name = "portal"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "portal"
path = "src/lib.rs"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
clap = { version = "4.1.8", features = ["derive"] }
color-hex = "0.2.0"
eframe = { version = "0.22.0", default-features = false, features = ["accesskit", "glow", "persistence"] }
egui = { version = "0.22.0", default-features = false, features = ["color-hex"] }
futures = "0.3.26"
opener = { version = "0.6.0", features = ["reveal"] }
poll-promise = { version = "0.2.0", features = ["async-std"] }
portal-proc-macro = { path = "crates/portal-proc-macro" }
portal-wormhole = { path = "crates/portal-wormhole" }
rfd = { version = "0.11.0", default-features = false, features = ["xdg-portal"] }
take_mut = "0.2.2"
tracing-subscriber = "0.3"
ubyte = "0.10.3"
winapi = "0.3.9"
thiserror = "1.0.38"

[patch.crates-io]
poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise" }

[workspace]
members = [
    "crates/portal-proc-macro",
    "crates/portal-wormhole",
]

[target.'cfg(windows)'.build-dependencies]
ico-builder = "0.1.0"
winresource = "0.1.15"

[target.'cfg(target_os = "linux")'.dependencies]
dark-light = "1.0.0"
