[package]
name = "portal"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bash/portal"

[lib]
name = "portal"
path = "src/lib.rs"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
clap = { version = "4.1.8", features = ["derive"] }
color-hex = "0.2.0"
eframe = { version = "0.27.1", default-features = false, features = ["accesskit", "glow", "persistence"] }
egui = { version = "0.27.2", default-features = false, features = ["color-hex"] }
winit = { version = "0.29.4", features = ["wayland-csd-adwaita"] }
futures = "0.3.26"
opener = { version = "0.7.0", features = ["reveal"] }
poll-promise = { version = "0.3.0", features = ["async-std"] }
portal-proc-macro = { path = "crates/portal-proc-macro" }
portal-wormhole = { path = "crates/portal-wormhole" }
rfd = { version = "0.14.1" }
replace_with = "0.1.7"
tracing-subscriber = "0.3"
ubyte = "0.10.3"
thiserror = "1.0.38"
surf = "2.3.2"
serde = { version = "1.0.164", features = ["derive"] }
log = { version = "0.4.19", features = ["kv"] }

[lints]
workspace = true

[workspace]
members = [
    "crates/portal-proc-macro",
    "crates/portal-wormhole",
]

[workspace.lints.clippy]
out_of_bounds_indexing = "allow"
str_to_string = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny" # Can't have forbid here because #[derive(Parser)] wants to allow all clippy restrictions.

[target.'cfg(windows)'.build-dependencies]
ico-builder = "0.1.0"
winresource = "0.1.15"

[target.'cfg(target_os = "linux")'.dependencies]
dark-light = "1.0.0"
