[package]
name = "portal"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bash/portal"

[lib]
name = "portal"
path = "src/lib.rs"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
clap = { version = "4.1.8", features = ["derive"] }
color-hex = "0.2.0"
eframe = { version = "0.30.0", features = ["persistence"] }
egui = { version = "0.30.0", features = ["color-hex"] }
futures = "0.3.26"
opener = { version = "0.7.0", features = ["reveal"] }
poll-promise = { version = "0.3.0", features = ["async-std"] }
portal-proc-macro = { path = "crates/portal-proc-macro" }
portal-wormhole = { path = "crates/portal-wormhole" }
rfd = { version = "0.15.1" }
replace_with = "0.1.7"
tracing-subscriber = "0.3"
ubyte = "0.10.3"
thiserror = "2.0.9"
surf = "2.3.2"
serde = { version = "1.0.164", features = ["derive"] }
log = { version = "0.4.19", features = ["kv"] }
egui-theme-switch = { version = "0.2.3" }

[lints]
workspace = true

[workspace]
members = ["crates/portal-proc-macro", "crates/portal-wormhole", "xtask"]

[workspace.lints.clippy]
out_of_bounds_indexing = "allow"
str_to_string = "warn"
unwrap_used = "warn"
undocumented_unsafe_blocks = "deny" # Can't have forbid here because #[derive(Parser)] wants to allow all clippy restrictions.

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.15"
