[package]
name = "portal-wormhole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dirs = "4.0.0"
futures = "0.3.26"
magic-wormhole = "0.6.0"
poll-promise = { version = "0.2.0", features = ["tokio"] }
single_value_channel = "1.2.2"
tempfile = "3.3.0"
thiserror = "1.0.38"
oneshot = { version = "0.1.5", default-features = false, features = ["std"] }
