[package]
name = "portal-wormhole"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
dirs = "4.0.0"
futures = "0.3.26"
magic-wormhole = "0.6.0"
single_value_channel = "1.2.2"
tempfile = "3.3.0"
thiserror = "1.0.38"
oneshot = { version = "0.1.5", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
zip = "0.6.4"
walkdir = "2.3.2"
