[package]
name = "portal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
async-std = "1.12.0"
dirs = "4.0.0"
eframe = { version = "0.20.1", features = ["dark-light", "persistence"] }
egui = { version = "0.20.1" }
futures = "0.3.26"
magic-wormhole = "0.6.0"
opener = "0.5.2"
poll-promise = { version = "0.2.0", features = ["tokio"] }
rfd = "0.11.0"
single_value_channel = "1.2.2"
take_mut = "0.2.2"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
tracing-subscriber = "0.3"
portal-proc-macro = { path = "../portal-proc-macro" }


[build-dependencies]
embed-resource = "1.4"